Re-implemented the parser using Nom instead of LALRPOP.
  - Deleted build.rs.
  - src/ast.rs: -
    - Added Expr::None variant ("null" in scripts).
    - Stmt: removed Box from Expr variant attributes.
    - StmtBlock: removed Box.
  - src/interpreter.rs: added support for Expr::None.
  - src/lib.rs: -
    - Replaced ProgramParser with parser::parse() (see below).
    - Modified interpret() so that the new parser::parse() is used.
    - Updated all tests.
  - Deleted src/p64lang.rs (parser built by LALRPOP) and
    src/p64lang.lalrpop (original LALRPOP grammar definition).
  - src/parser.rs: new parser written using combinators provided by Nom.
    Includes a complete test suite and exposes the parse() function.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,5 @@ name = "p64lang"
 version = "0.1.0"
 authors = ["Simon Pugnet <simon@polaris64.net>"]
 
-[build-dependencies]
-lalrpop = "0.15.2"
-
 [dependencies]
-lalrpop-util = "0.15.2"
-regex = "0.2.1"
+nom = "4.0.0"
