Initial commit on the F_no_std branch
  - Added crate features: "std" and "no_std". Default is ["std"].
  - Added conditional compilation directives to use types from std, core
    and alloc based on enabled features.
  - Temporarily removed main lib tests if "no_std" is enabled as they
    currently rely on standard library features.
  - src/runtime.rs: NativeFunction implementations for print/println are
    now simply stubs when "no_std" is enabled.
  - p64lang_cli: explicitly specified "std" feature from p64lang crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,10 @@ name = "p64lang"
 version = "0.1.0"
 authors = ["Simon Pugnet <simon@polaris64.net>"]
 
+[features]
+default = ["std"]
+no_std = ["nom/alloc"]
+std = ["nom/std"]
+
 [dependencies]
-nom = "4.0.0"
+nom = { version = "4.0.0", default-features = false }
